fix some colors in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ html, body, #root {
   padding: 0;
   height: 100%;
   width: 100%;
+  color: black;
 }
 
 .App {
@@ -14,6 +15,7 @@ html, body, #root {
 }
 
 .password-protection {
+  background-color: white;
   position: relative;
 }
 
